# demo-yew

./: .gitignore  Cargo.toml  Dockerfile  nginx.conf
.github/workflows/: common.yml  dev.yml  feature.yml  master.yml  release.yml
src/: main.rs  simulation.rs
