[package]
name = "demo-yew"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "^0.23", features = ["csr"] }
rand = "^0.10"
gloo = "^0.12"
serde = { version = "^1.0", features = ["derive"] }
web-sys = { version = "^0.3", features = ["HtmlInputElement"] }
getrandom = { version = "^0.4", features = ["wasm_js"] }